--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,7 @@ services:
         ports: 
             - '4200:4200' 
         command: > 
-            bash -c "npm install && ng serve --host 0.0.0.0 --port 4200"
+            bash -c "npm install && chmod -fR 777 node_modules && ng serve --host 0.0.0.0 --port 4200"
         networks:
             - private
 
