--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,9 @@ services:
             - ./frontend/:/usr/src/app/frontend 
         ports: 
             - '4200:4200' 
+            - '4201:4201' 
         command: > 
-            bash -c "npm install && chmod -fR 777 node_modules && ng serve --host 0.0.0.0 --port 4200"
+            bash -c "npm install && chmod -fR 777 node_modules && echo Completed && ng serve --host 0.0.0.0 --port 4200 --live-reload --poll=5000"
         networks:
             - private
 
